--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,9 @@
-#floor{
+.floor{
     background-color: black;
-    height: 100px;
+    height: 150px;
     outline: 6px solid red;
     margin: 20px;
+}
+.floorCounting{
+    color: white;
 }
